--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = clr-avx-tools
-url = file:///aot/build/clearlinux/packages/clr-avx-tools/clr-avx-tools-v100.1.tar.gz
+url = file:///aot/build/clearlinux/packages/clr-avx-tools/clr-avx-tools-v101.1.tar.gz
 archives = 
 giturl = https://github.com/clearlinux/clr-avx-tools.git
 domain = 
@@ -26,8 +26,14 @@ altcargo1_lto = false
 altflags_pgo = false
 # alternative pgo 32bits flags
 altflags_pgo_32 = false
+# alternative pgo flags for profiling outside chroot
+altflags_pgo_ext = false
+# alternative pgo flags for profiling outside chroot phase
+altflags_pgo_ext_phase = false
 # unset %build ld_as_needed variable
 asneeded = false
+# enable a simpler autogen macro
+autogen_simple = false
 # this package is trusted enough to automatically update (used by other tools)
 autoupdate = false
 # extend flags with '-std=gnu++98
@@ -86,6 +92,8 @@ openmpi = false
 optimize_size = false
 # set profile for pgo
 pgo = false
+# enable ruby build from gemspec
+ruby_pattern_from_gemspec = false
 # set flags for security-sensitive builds
 security_sensitive = false
 # do not run test suite
