Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = clr-avx-tools
-url = file:///aot/build/clearlinux/packages/clr-avx-tools/clr-avx-tools-v110.1.tar.gz
+url = file:///aot/build/clearlinux/packages/clr-avx-tools/clr-avx-tools-v112.2.tar.gz
 archives = 
 giturl = https://github.com/clearlinux/clr-avx-tools.git
 domain = 
@@ -22,6 +22,10 @@ allow_test_failures = false
 altcargo1 = false
 # enable cargo local with full lto
 altcargo1_lto = false
+# enable cargo local with pgo
+altcargo_pgo = false
+# enable cargo local with instrumented sampling bolt
+altcargo_sample_bolt = false
 # alternative pgo flags
 altflags_pgo = false
 # alternative pgo 32bits flags
@@ -72,6 +76,8 @@ fsalt1_32 = false
 funroll-loops = false
 # set flags to smallest -02 flags possible
 insecure_build = false
+# do not remove current buildroot
+keepbuildroot = false
 # do not remove static libraries
 keepstatic = true
 # do not require autostart subpackage
