Small fixes & housekeeping.

--- a/options.conf
+++ b/options.conf
@@ -1,6 +1,6 @@
 [package]
 name = clr-avx-tools
-url = file:///aot/build/clearlinux/packages/clr-avx-tools/clr-avx-tools-v112.2.tar.gz
+url = file:///aot/build/clearlinux/packages/clr-avx-tools/clr-avx-tools-v113.3.tar.gz
 archives = 
 giturl = https://github.com/clearlinux/clr-avx-tools.git
 domain = 
@@ -68,6 +68,8 @@ exclude_locales = false
 fast-math = false
 # enable filtering of provides and requires
 filters_provreq = false
+# enable %find_lang macro
+findlang = false
 # alternative flags
 fsalt1 = true
 # alternative 32bits flags
